--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-ui": "^2.4.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
+    "vue-lazyload": "^3.0.0-rc.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -21,6 +26,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -28,6 +34,7 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
