--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "element-ui": "^2.4.5",
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
-    "vue-lazyload": "^3.0.0-rc.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -33,7 +33,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "prettier": "^2.4.1",
+    "prettier": "2.7.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
